@@ -1,7 +1,8 @@
- $Id: ChangeLog,v 1.113.2.74 2011/11/17 07:12:16 uehira Exp $
+ $Id: ChangeLog,v 1.113.2.75 2011/11/17 11:25:51 uehira Exp $
 
 2011-11-17  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
 	* Version 2.2.1 released.
+	* src/win.c : added '-g' oprtion. pass invalid channels table.
 	* recvt46 : added '-4' and '-6' options.
 	* libwinlog : bump version.
 
